# test_task

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: main.yml
api/: serializers.py  urls.py  views.py
config/: celery.py  settings.py
images/: images.md
nginx/: nginx.conf
payouts/: admin.py  apps.py  models.py  tasks.py
payouts/migrations/: 0001_initial.py
tests/: conftest.py  test_payout.py
